--- a/app.html
+++ b/app.html
@@ -10,148 +10,151 @@
     body {
       min-height: 100vh;
       font-family: 'Montserrat', Arial, sans-serif;
-      background: radial-gradient(ellipse at 60% 40%, #233d61 0%, #0a1931 100%);
+      background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
       display: flex; flex-direction: column;
       position: relative;
       overflow-x: hidden;
     }
-    #star-canvas {
-      position: fixed; left:0; top:0; width:100vw; height:100vh; z-index:0; pointer-events:none;
-    }
-    #mouse-light {
-      position: fixed; top:0; left:0; width:120px; height:120px; margin-left:-60px; margin-top:-60px;
-      pointer-events:none; border-radius:50%;
-      background: radial-gradient(circle, #86bcff44 0%, #fff0 80%);
-      mix-blend-mode: lighten; z-index: 10; transition: background 0.22s;
-    }
     .mini-header {
       display: flex; align-items: center;
-      background: #192945d5; box-shadow: 0 1px 8px #185adb09;
-      height: 47px; min-height: 40px; padding: 0 15px 0 7px;
-      border-bottom: 1.2px solid #233d61;
+      background: #eaf7ffed; box-shadow: 0 2px 16px #70bbfa22;
+      height: 52px; min-height: 42px; padding: 0 18px 0 10px;
+      border-bottom: 1.2px solid #a4d7ff;
       position: sticky; top: 0; left: 0; right: 0; z-index: 20; gap: 14px;
     }
     .home-btn {
       background: none; border: none;
       display: flex; align-items: center; justify-content: center;
-      cursor: pointer; border-radius:50%; width: 33px; height: 33px;
+      cursor: pointer; border-radius:50%; width: 36px; height: 36px;
       margin-right: 7px; transition: background 0.14s;
     }
-    .home-btn:hover {background: #253d62;}
-    .home-btn img {width:21px;height:21px;}
-    .mini-title {font-weight:700; font-size:1.07rem; color:#63aaff;}
+    .home-btn:hover {background: #d7eeff;}
+    .home-btn img {width:23px;height:23px;}
+    .mini-title {font-weight:700; font-size:1.17rem; color:#2295e8;}
+
+    main {
+      flex: 1 0 auto;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     .app-grid-wrap {
-      margin: 60px auto 50px auto;
-      background: rgba(18,32,67,0.96);
-      border-radius: 24px;
-      box-shadow: 0 6px 32px 0 #12204385, 0 1px 4px #185adb09;
-      padding: 36px 20px 34px 20px;
+      margin: 48px auto 32px auto;
+      background: rgba(255,255,255,0.92);
+      border-radius: 26px;
+      box-shadow: 0 7px 38px 0 #70bbfa28, 0 1px 4px #2295e810;
+      padding: 32px 20px 34px 20px;
       width: 100%;
-      max-width: 1050px;
-      backdrop-filter: blur(2.5px);
-      animation: fadein 0.9s cubic-bezier(.43,.94,.71,1.36);
+      max-width: 1100px;
+      backdrop-filter: blur(1.5px);
+      animation: fadein 0.8s cubic-bezier(.43,.94,.71,1.36);
     }
     .app-title {
-      font-size: 1.65rem;
+      font-size: 1.68rem;
       font-weight: 800;
-      color: #63aaff;
-      margin-bottom: 28px;
+      color: #1d7ecf;
+      margin-bottom: 25px;
       letter-spacing: 1.1px;
       text-align: center;
-      text-shadow: 0 2px 12px #185adb34;
-      animation: fadein 1.1s cubic-bezier(.43,.94,.71,1.36);
+      text-shadow: 0 3px 13px #70bbfa22;
+      animation: fadein 1.0s cubic-bezier(.43,.94,.71,1.36);
     }
-    @keyframes fadein {from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:none;}}
+    @keyframes fadein {from{opacity:0;transform:translateY(18px);}to{opacity:1;transform:none;}}
     .app-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(185px,1fr));
       gap: 25px 18px;
       width: 100%;
     }
-    .app-card {
-      background: #2496ff10;
-      border-radius: 15px;
-      box-shadow: 0 2px 12px #13204314;
+    a.app-card {
       display: flex; flex-direction: column; align-items: center;
+      background: #fff;
+      border-radius: 15px;
+      box-shadow: 0 2px 16px #65b8fb18;
       padding: 22px 12px 13px 12px;
       min-height: 188px;
-      transition: box-shadow 0.16s, transform 0.13s;
+      transition: box-shadow 0.17s, transform 0.12s, filter 0.11s;
       position: relative;
+      text-decoration: none !important;
+      cursor: pointer;
+      border: 2.5px solid transparent;
+      outline: none;
     }
-    .app-card:hover {
-      box-shadow: 0 10px 32px #2bb5e450, 0 1.5px 7px #119caa23;
-      transform: translateY(-4px) scale(1.025);
+    a.app-card:hover, a.app-card:focus {
+      box-shadow: 0 12px 36px #44bcfc4a, 0 3px 12px #2295e821;
+      transform: translateY(-5px) scale(1.031);
+      border: 2.5px solid #4db2f5;
+      filter: brightness(1.07);
       z-index: 2;
     }
     .app-card .app-icon {
-      width: 60px; height: 60px;
-      margin-bottom: 15px;
+      width: 62px; height: 62px;
+      margin-bottom: 14px;
       display: flex; align-items: center; justify-content: center;
-      font-size: 2.7em; border-radius: 11px;
-      background: #1792ec17;
-      box-shadow: 0 2px 8px #154fc82b;
-      color: #2587d5;
+      font-size: 2.8em; border-radius: 14px;
+      background: #eaf5ff;
+      box-shadow: 0 2px 8px #d3f0ff45;
+      color: #2696ea;
       overflow: hidden;
+      border: 2px solid #bee4fc;
     }
     .app-card .app-icon img {
       width: 100%; height: 100%; object-fit: contain;
       background: none; border-radius: 11px;
       display: block;
     }
-    .app-card .app-name {
-      font-size: 1.04rem;
+    .app-card .app-link, .app-card .app-name {
+      color: #2295e8;
+      text-decoration: none;
       font-weight: 700;
-      margin-bottom: 4px;
-      color: #2195ef;
+      font-size: 1.07rem;
+      margin-bottom: 3px;
       text-align: center;
-    }
-    .app-card .app-link {
-      color: #217ae0;
-      text-decoration: underline;
+      transition: color 0.13s;
       cursor: pointer;
-      font-weight: 700;
-      font-size: 1.02rem;
     }
     .app-card .app-desc {
-      color: #a8e1ff;
-      font-size: .95rem;
+      color: #429de0;
+      font-size: .97rem;
       margin-bottom: 6px;
       text-align: center;
     }
     .app-card .app-price {
       margin-top: auto;
-      font-size: .98rem;
-      color: #11e2ff;
+      font-size: 1.01rem;
+      color: #13d28d;
       font-weight: 700;
-      letter-spacing: .13px;
+      letter-spacing: .15px;
       text-align: center;
     }
     @media (max-width:700px) {
       .app-grid-wrap {max-width: 99vw; padding:12px 2vw;}
-      .app-title {font-size: 1.08rem;}
-      .app-grid {gap:12px 6px;}
-      .app-card {padding:13px 2px 9px 2px; min-height:160px;}
+      .app-title {font-size: 1.11rem;}
+      .app-grid {gap:13px 6px;}
+      .app-card {padding:12px 2px 9px 2px; min-height:150px;}
     }
     footer {
-      background: #122043;
-      color: #8ebeff;
+      background: #ecf7ff;
+      color: #2696ea;
       text-align: center;
-      padding: 26px 10px 16px 10px;
+      padding: 18px 10px 12px 10px;
       font-size: 1.08rem;
       margin-top: 40px;
-      border-radius: 22px 22px 0 0;
-      letter-spacing: .22px;
-      box-shadow: 0 -3px 22px #0a193112;
+      border-radius: 20px 20px 0 0;
+      letter-spacing: .18px;
+      box-shadow: 0 -3px 22px #b3e5ff15;
       flex-shrink: 0;
       z-index: 2;
       position: relative;
+      width: 100%;
+      min-height: 56px;
+      /* Không dùng fixed/absolute để tự fit chân trang */
     }
   </style>
 </head>
 <body>
-  <canvas id="star-canvas"></canvas>
-  <div id="mouse-light"></div>
   <header class="mini-header">
     <button class="home-btn" onclick="window.location.href='index.html'" title="Trang chủ">
       <img src="logo.png" alt="Trang chủ">
@@ -162,152 +165,54 @@
     <div class="app-grid-wrap">
       <div class="app-title">Ứng dụng nổi bật</div>
       <div class="app-grid">
-
-        <!-- Card 1: Có icon -->
-        <div class="app-card">
+        <!-- Card mẫu, các app tiếp theo bạn thêm tương tự -->
+        <a class="app-card" href="https://www.tiktok.com/" target="_blank">
           <div class="app-icon">
             <img src="tiktok.png" alt="TikTok"
               onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
           </div>
-          <a href="https://www.tiktok.com/" target="_blank" class="app-link">TikTok</a>
+          <span class="app-link">TikTok</span>
           <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 2: Không có icon sẽ tự về icon cờ lê -->
-        <div class="app-card">
+        </a>
+        <a class="app-card" href="#" >
           <div class="app-icon">
             <img src="unikey.png" alt="Unikey"
               onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
           </div>
-          <a href="#" class="app-link">Unikey - Bàn phím tiếng Việt</a>
+          <span class="app-link">Unikey - Bàn phím tiếng Việt</span>
           <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 3 -->
-        <div class="app-card">
+        </a>
+        <a class="app-card" href="https://facebook.com" target="_blank">
           <div class="app-icon">
             <img src="facebook.png" alt="Facebook"
               onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
           </div>
-          <a href="https://facebook.com" target="_blank" class="app-link">Facebook</a>
+          <span class="app-link">Facebook</span>
           <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 4 -->
-        <div class="app-card">
+        </a>
+        <a class="app-card" href="https://messenger.com" target="_blank">
           <div class="app-icon">
             <img src="messenger.png" alt="Messenger"
               onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
           </div>
-          <a href="https://messenger.com" target="_blank" class="app-link">Messenger</a>
+          <span class="app-link">Messenger</span>
           <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 5 -->
-        <div class="app-card">
+        </a>
+        <a class="app-card" href="https://chat.openai.com" target="_blank">
           <div class="app-icon">
             <img src="chatgpt.png" alt="ChatGPT"
               onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
           </div>
-          <a href="https://chat.openai.com" target="_blank" class="app-link">ChatGPT</a>
+          <span class="app-link">ChatGPT</span>
           <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 6 -->
-        <div class="app-card">
-          <div class="app-icon">
-            <img src="lively.png" alt="Lively Wallpaper"
-              onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
-          </div>
-          <a href="#" class="app-link">Lively Wallpaper</a>
-          <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 7 -->
-        <div class="app-card">
-          <div class="app-icon">
-            <img src="seelen.png" alt="Seelen UI"
-              onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
-          </div>
-          <a href="#" class="app-link">Seelen UI</a>
-          <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 8 -->
-        <div class="app-card">
-          <div class="app-icon">
-            <img src="spotify.png" alt="Spotify"
-              onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
-          </div>
-          <a href="https://spotify.com" target="_blank" class="app-link">Spotify – Âm nhạc và Podcast</a>
-          <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 9 -->
-        <div class="app-card">
-          <div class="app-icon">
-            <img src="translucenttb.png" alt="TranslucentTB"
-              onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
-          </div>
-          <a href="#" class="app-link">TranslucentTB</a>
-          <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Card 10 -->
-        <div class="app-card">
-          <div class="app-icon">
-            <img src="icloud.png" alt="iCloud"
-              onerror="this.onerror=null;this.src='ece328b4-946b-4930-8303-01271cf429a2.png';"/>
-          </div>
-          <a href="https://www.icloud.com/" target="_blank" class="app-link">iCloud</a>
-          <div class="app-price">Miễn phí</div>
-        </div>
-        <!-- Thêm card mới ở đây, chỉ cần đúng src icon, không có sẽ tự lấy icon cờ lê -->
+        </a>
+        <!-- Thêm các card tiếp theo nếu muốn -->
       </div>
     </div>
   </main>
   <footer id="footer"></footer>
   <script>
-    // Hiệu ứng nền và mouse light giữ nguyên như cũ
-    const canvas = document.getElementById('star-canvas');
-    const ctx = canvas.getContext('2d');
-    let stars = [], shootingStars = [], w = window.innerWidth, h = window.innerHeight;
-    function resize() {
-      w = window.innerWidth; h = window.innerHeight;
-      canvas.width = w; canvas.height = h;
-      createStars(w > 900 ? 140 : 70); createShootingStars(w > 900 ? 5 : 2);
-    }
-    window.addEventListener('resize', resize);
-    function randomStar() { return {x: Math.random()*w, y: Math.random()*h, r: Math.random()*1.3+0.3, o: Math.random()*0.5+0.4, speed: Math.random()*0.08+0.04} }
-    function createStars(count) { stars = []; for(let i=0; i<count; i++) stars.push(randomStar()); }
-    createStars(w > 900 ? 140 : 70);
-    function randomShootingStar() {
-      const side = Math.random(); let x, y, vx, vy;
-      if (side < 0.5) { x = Math.random()*w; y = -50; vx = Math.random()*3+4; vy = Math.random()*2+3.5; }
-      else { x = -60; y = Math.random()*h*0.5; vx = Math.random()*5+3; vy = Math.random()*2+2.5; }
-      return {x, y, vx, vy, len: Math.random()*110+80, life:0, maxLife:Math.random()*15+14, alpha:Math.random()*0.5+0.35}
-    }
-    function createShootingStars(count) { shootingStars = []; for(let i=0;i<count;i++) shootingStars.push(randomShootingStar()); }
-    createShootingStars(w > 900 ? 5 : 2);
-    function animate() {
-      ctx.clearRect(0, 0, w, h);
-      for(let s of stars) {
-        ctx.save(); ctx.beginPath(); ctx.arc(s.x, s.y, s.r, 0, 2 * Math.PI);
-        ctx.globalAlpha = s.o; ctx.fillStyle = "#fff"; ctx.shadowBlur = 8; ctx.shadowColor = "#96e0ff";
-        ctx.fill(); ctx.restore(); s.x += s.speed * 0.6; if (s.x > w) s.x = 0;
-      }
-      for (let star of shootingStars) {
-        ctx.save(); ctx.globalAlpha = star.alpha * (1 - star.life / star.maxLife); ctx.strokeStyle = "white";
-        ctx.shadowColor = "#b9eafe"; ctx.shadowBlur = 12; ctx.lineWidth = 2.2;
-        ctx.beginPath(); ctx.moveTo(star.x, star.y); ctx.lineTo(star.x - star.vx * star.len, star.y - star.vy * star.len);
-        ctx.stroke(); ctx.restore();
-        star.x += star.vx; star.y += star.vy; star.life++;
-        if (star.life > star.maxLife || star.x > w + 150 || star.y > h + 100) Object.assign(star, randomShootingStar());
-      }
-      requestAnimationFrame(animate);
-    }
-    animate();
-    // Mouse light effect
-    const mouseLight = document.getElementById('mouse-light');
-    document.addEventListener('mousemove', (e) => {
-      mouseLight.style.left = e.clientX + 'px';
-      mouseLight.style.top = e.clientY + 'px';
-      mouseLight.style.opacity = 1;
-    });
-    document.addEventListener('mouseleave', () => { mouseLight.style.opacity = 0; });
-    document.addEventListener('mouseenter', () => { mouseLight.style.opacity = 1; });
-    // Footer (không có file thì không hiện gì, không lỗi)
+    // Footer lấy động từ file footer.html
     fetch('footer.html')
       .then(r => r.text())
       .then(html => { document.getElementById('footer').innerHTML = html; })
