--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!-- footer.html -->
 <footer style="
-  width: 100vw;
+  width: 100%;
   background: #f4f9ff;
   color: #185adb;
   font-family: 'Montserrat', Arial, sans-serif;
@@ -12,12 +12,14 @@
   box-shadow: 0 -2px 16px #185adb13;
   border-radius: 24px 24px 0 0;
   letter-spacing: .01em;
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 18px;
   flex-wrap: wrap;
+  box-sizing: border-box;
+  max-width: 100vw;
 ">
   <span>
     &copy; 2025 <span style="color:#185adb;font-weight:700;">Tra Cứu Học Thuật &amp; AI</span>
