--- a/app.html
+++ b/app.html
@@ -9,9 +9,6 @@
     body {
       min-height: 100vh;
       font-family: Arial, Helvetica, sans-serif;
-      /* Nếu muốn font Times, đổi dòng trên thành:
-         font-family: 'Times New Roman', Times, serif;
-      */
       background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
       display: flex; flex-direction: column;
     }
@@ -30,7 +27,7 @@
     }
     .home-btn:hover {background: #d7eeff;}
     .home-btn img {width:23px;height:23px;}
-    .mini-title {font-weight:700; font-size:1.17rem; color:#2295e8;}
+    .mini-title {font-weight:bold; font-size:1.17rem; color:#2295e8;}
     main {
       flex: 1 0 auto;
       width: 100vw;
@@ -50,14 +47,14 @@
       animation: fadein 0.8s cubic-bezier(.43,.94,.71,1.36);
     }
     .app-title {
-      font-size: 1.68rem;
+      font-family: Arial, Helvetica, sans-serif !important;
+      font-size: 1.54rem;
       font-weight: bold;
       color: #1d7ecf;
       margin-bottom: 28px;
       letter-spacing: 1.1px;
       text-align: center;
       text-shadow: 0 3px 13px #70bbfa22;
-      animation: fadein 1.0s cubic-bezier(.43,.94,.71,1.36);
     }
     @keyframes fadein {from{opacity:0;transform:translateY(18px);}to{opacity:1;transform:none;}}
     .app-grid {
@@ -132,21 +129,18 @@
       .app-card .app-icon {width:42px;height:42px;}
       .app-card .app-link {font-size:0.99rem;}
     }
-    footer {
-      background: #ecf7ff;
-      color: #2696ea;
-      text-align: center;
-      padding: 18px 10px 12px 10px;
-      font-size: 1.08rem;
-      margin-top: 40px;
-      border-radius: 20px 20px 0 0;
-      letter-spacing: .18px;
-      box-shadow: 0 -3px 22px #b3e5ff15;
-      flex-shrink: 0;
-      z-index: 2;
-      position: relative;
-      width: 100%;
-      min-height: 56px;
+    /* Ép footer nhúng luôn fit, không lệch */
+    #footer, #footer > *, #footer > * > * {
+      width: 100% !important;
+      max-width: 100vw !important;
+      margin-left: 0 !important;
+      margin-right: 0 !important;
+      box-sizing: border-box !important;
+      left: 0 !important;
+      right: 0 !important;
+      border-radius: 24px 24px 0 0 !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
   </style>
 </head>
@@ -161,20 +155,18 @@
     <div class="app-grid-wrap">
       <div class="app-title">Ứng dụng nổi bật</div>
       <div class="app-grid">
-        <!-- App có icon riêng -->
         <a class="app-card" href="https://www.tiktok.com/" target="_blank">
           <div class="app-icon">
             <img src="tiktok.png" alt="TikTok"
-              onerror="this.onerror=null;this.src='cf82c8c3-3b46-4599-b346-7574e30e4311.png';"/>
+              onerror="this.onerror=null;this.src='app.png';"/>
           </div>
           <span class="app-link">TikTok</span>
           <div class="app-price">Miễn phí</div>
         </a>
-        <!-- App không có icon, hiện cờ lê mặc định -->
         <a class="app-card" href="#">
           <div class="app-icon">
             <img src="unikey.png" alt="Unikey"
-              onerror="this.onerror=null;this.src='cf82c8c3-3b46-4599-b346-7574e30e4311.png';"/>
+              onerror="this.onerror=null;this.src='app.png';"/>
           </div>
           <span class="app-link">Unikey - Bàn phím tiếng Việt</span>
           <div class="app-price">Miễn phí</div>
@@ -182,7 +174,7 @@
         <a class="app-card" href="https://facebook.com" target="_blank">
           <div class="app-icon">
             <img src="facebook.png" alt="Facebook"
-              onerror="this.onerror=null;this.src='cf82c8c3-3b46-4599-b346-7574e30e4311.png';"/>
+              onerror="this.onerror=null;this.src='app.png';"/>
           </div>
           <span class="app-link">Facebook</span>
           <div class="app-price">Miễn phí</div>
@@ -190,7 +182,7 @@
         <a class="app-card" href="https://messenger.com" target="_blank">
           <div class="app-icon">
             <img src="messenger.png" alt="Messenger"
-              onerror="this.onerror=null;this.src='cf82c8c3-3b46-4599-b346-7574e30e4311.png';"/>
+              onerror="this.onerror=null;this.src='app.png';"/>
           </div>
           <span class="app-link">Messenger</span>
           <div class="app-price">Miễn phí</div>
@@ -198,12 +190,11 @@
         <a class="app-card" href="https://chat.openai.com" target="_blank">
           <div class="app-icon">
             <img src="chatgpt.png" alt="ChatGPT"
-              onerror="this.onerror=null;this.src='cf82c8c3-3b46-4599-b346-7574e30e4311.png';"/>
+              onerror="this.onerror=null;this.src='app.png';"/>
           </div>
           <span class="app-link">ChatGPT</span>
           <div class="app-price">Miễn phí</div>
         </a>
-        <!-- Thêm các app khác theo ý bạn, chỉ cần đổi src/icon/link -->
       </div>
     </div>
   </main>
