--- a/app.html
+++ b/app.html
@@ -5,12 +5,17 @@
   <title>Danh sách Ứng dụng</title>
   <link rel="icon" type="image/png" href="logo.png">
   <style>
-    html, body {height:100%;margin:0;padding:0;}
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
     body {
       min-height: 100vh;
       font-family: Arial, Helvetica, sans-serif;
       background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
-      display: flex; flex-direction: column;
+      display: flex;
+      flex-direction: column;
     }
     .mini-header {
       display: flex; align-items: center;
@@ -129,18 +134,23 @@
       .app-card .app-icon {width:42px;height:42px;}
       .app-card .app-link {font-size:0.99rem;}
     }
-    /* Ép footer nhúng luôn fit, không lệch */
-    #footer, #footer > *, #footer > * > * {
+    /* Fix footer fit và icon không bị rơi */
+    #footer {
       width: 100% !important;
-      max-width: 100vw !important;
-      margin-left: 0 !important;
-      margin-right: 0 !important;
-      box-sizing: border-box !important;
+      max-width: 100% !important;
+      margin: 0 auto !important;
+      padding: 0 !important;
       left: 0 !important;
       right: 0 !important;
+      bottom: 0 !important;
       border-radius: 24px 24px 0 0 !important;
-      padding-left: 0 !important;
-      padding-right: 0 !important;
+      position: static !important;
+      box-sizing: border-box !important;
+      display: block !important;
+      min-height: 0 !important;
+    }
+    #footer > *, #footer > * > * {
+      box-sizing: border-box !important;
     }
   </style>
 </head>
