--- a/app.html
+++ b/app.html
@@ -6,16 +6,15 @@
   <link rel="icon" type="image/png" href="logo.png">
   <style>
     html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
+      height:100%;
+      margin:0;
+      padding:0;
     }
     body {
       min-height: 100vh;
       font-family: Arial, Helvetica, sans-serif;
       background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
-      display: flex;
-      flex-direction: column;
+      display: flex; flex-direction: column;
     }
     .mini-header {
       display: flex; align-items: center;
@@ -64,7 +63,7 @@
     @keyframes fadein {from{opacity:0;transform:translateY(18px);}to{opacity:1;transform:none;}}
     .app-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(170px,1fr));
+      grid-template-columns: repeat(auto-fit, minmax(185px,1fr));
       gap: 22px 18px;
       width: 100%;
     }
@@ -81,6 +80,12 @@
       cursor: pointer;
       border: 2.2px solid transparent;
       outline: none;
+    }
+    a.app-card.soon {
+      opacity: 0.6;
+      pointer-events: none;
+      cursor: not-allowed;
+      filter: grayscale(0.15);
     }
     a.app-card:hover, a.app-card:focus {
       box-shadow: 0 12px 36px #44bcfc33, 0 3px 12px #2295e81a;
@@ -111,20 +116,31 @@
       text-decoration: none;
       font-weight: bold;
       font-size: 1.08rem;
-      margin-bottom: 3px;
+      margin-bottom: 2px;
       text-align: center;
       transition: color 0.13s;
       cursor: pointer;
-      line-height: 1.16;
+      line-height: 1.15;
       word-break: break-word;
     }
+    .app-card .app-desc {
+      color: #666;
+      font-size: .96rem;
+      margin-bottom: 5px;
+      margin-top: 2px;
+      text-align: center;
+      line-height: 1.32;
+    }
     .app-card .app-price {
-      margin-top: 8px;
+      margin-top: 6px;
       font-size: 1.01rem;
       color: #10bd76;
       font-weight: bold;
       letter-spacing: .12px;
       text-align: center;
+    }
+    .app-card.soon .app-price {
+      color: #ea950e;
     }
     @media (max-width:700px) {
       .app-grid-wrap {max-width: 99vw; padding:12px 2vw;}
@@ -133,8 +149,8 @@
       .app-card {padding:11px 2px 9px 2px; min-height:130px;}
       .app-card .app-icon {width:42px;height:42px;}
       .app-card .app-link {font-size:0.99rem;}
+      .app-card .app-desc {font-size: .88rem;}
     }
-    /* Fix footer fit và icon không bị rơi */
     #footer {
       width: 100% !important;
       max-width: 100% !important;
@@ -164,52 +180,109 @@
   <main>
     <div class="app-grid-wrap">
       <div class="app-title">Ứng dụng nổi bật</div>
-      <div class="app-grid">
-        <a class="app-card" href="https://www.tiktok.com/" target="_blank">
-          <div class="app-icon">
-            <img src="tiktok.png" alt="TikTok"
-              onerror="this.onerror=null;this.src='app.png';"/>
-          </div>
-          <span class="app-link">TikTok</span>
-          <div class="app-price">Miễn phí</div>
-        </a>
-        <a class="app-card" href="#">
-          <div class="app-icon">
-            <img src="unikey.png" alt="Unikey"
-              onerror="this.onerror=null;this.src='app.png';"/>
-          </div>
-          <span class="app-link">Unikey - Bàn phím tiếng Việt</span>
-          <div class="app-price">Miễn phí</div>
-        </a>
-        <a class="app-card" href="https://facebook.com" target="_blank">
-          <div class="app-icon">
-            <img src="facebook.png" alt="Facebook"
-              onerror="this.onerror=null;this.src='app.png';"/>
-          </div>
-          <span class="app-link">Facebook</span>
-          <div class="app-price">Miễn phí</div>
-        </a>
-        <a class="app-card" href="https://messenger.com" target="_blank">
-          <div class="app-icon">
-            <img src="messenger.png" alt="Messenger"
-              onerror="this.onerror=null;this.src='app.png';"/>
-          </div>
-          <span class="app-link">Messenger</span>
-          <div class="app-price">Miễn phí</div>
-        </a>
-        <a class="app-card" href="https://chat.openai.com" target="_blank">
-          <div class="app-icon">
-            <img src="chatgpt.png" alt="ChatGPT"
-              onerror="this.onerror=null;this.src='app.png';"/>
-          </div>
-          <span class="app-link">ChatGPT</span>
-          <div class="app-price">Miễn phí</div>
-        </a>
-      </div>
+      <div class="app-grid" id="app-list"></div>
     </div>
   </main>
   <footer id="footer"></footer>
   <script>
+    // === DANH SÁCH APP DỄ BỔ SUNG ===
+    const apps = [
+      {
+        name: "TikTok",
+        icon: "tiktok.png",
+        link: "https://www.tiktok.com/",
+        desc: "Nền tảng video ngắn nổi tiếng, giải trí và sáng tạo.",
+        price: "Miễn phí"
+      },
+      {
+        name: "Unikey - Bàn phím tiếng Việt",
+        icon: "unikey.png",
+        link: "#",
+        desc: "Bộ gõ tiếng Việt tốt nhất cho Windows, miễn phí, gọn nhẹ.",
+        price: "Miễn phí"
+      },
+      {
+        name: "Facebook",
+        icon: "facebook.png",
+        link: "https://facebook.com",
+        desc: "Mạng xã hội lớn nhất thế giới, kết nối mọi người.",
+        price: "Miễn phí"
+      },
+      {
+        name: "Messenger",
+        icon: "messenger.png",
+        link: "https://messenger.com",
+        desc: "Ứng dụng chat miễn phí thuộc hệ sinh thái Facebook.",
+        price: "Miễn phí"
+      },
+      {
+        name: "ChatGPT",
+        icon: "chatgpt.png",
+        link: "https://chat.openai.com",
+        desc: "Trò chuyện với AI đa năng, hỗ trợ học tập, giải đáp mọi lĩnh vực.",
+        price: "Miễn phí"
+      },
+      // App SOON demo
+      {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Tính năng đang phát triển, sẽ cập nhật sớm.",
+        price: "Soon"
+      },
+      {
+        name: "Lively Wallpaper",
+        icon: "app.png",
+        link: "#",
+        desc: "Tùy biến hình nền động cho máy tính Windows.",
+        price: "Soon"
+      },
+      {
+        name: "Seelen UI",
+        icon: "app.png",
+        link: "#",
+        desc: "Chỉnh cửa sổ, chia màn hình tiện lợi cho Windows.",
+        price: "Soon"
+      },
+      {
+        name: "Spotify",
+        icon: "app.png",
+        link: "#",
+        desc: "Nghe nhạc trực tuyến, podcast, thư viện khổng lồ.",
+        price: "Soon"
+      },
+      {
+        name: "TranslucentTB",
+        icon: "app.png",
+        link: "#",
+        desc: "Làm thanh Taskbar trong suốt, đẹp cho Windows.",
+        price: "Soon"
+      },
+      {
+        name: "iCloud",
+        icon: "app.png",
+        link: "#",
+        desc: "Lưu trữ dữ liệu và đồng bộ đa thiết bị Apple.",
+        price: "Soon"
+      }
+    ];
+    // ===== RENDER APP =====
+    function renderApps() {
+      const appList = document.getElementById("app-list");
+      appList.innerHTML = apps.map(app => `
+        <a class="app-card${app.price.toLowerCase()==='soon'?' soon':''}" ${app.link && app.link!=='#'?'href="'+app.link+'" target="_blank"':''}>
+          <div class="app-icon">
+            <img src="${app.icon}" alt="${app.name}" onerror="this.onerror=null;this.src='app.png';"/>
+          </div>
+          <span class="app-link">${app.name}</span>
+          <div class="app-desc">${app.desc || ''}</div>
+          <div class="app-price">${app.price}</div>
+        </a>
+      `).join('');
+    }
+    renderApps();
+
+    // ==== Footer lấy động ====
     fetch('footer.html')
       .then(r => r.text())
       .then(html => { document.getElementById('footer').innerHTML = html; })
