--- a/app.html
+++ b/app.html
@@ -40,13 +40,14 @@
       align-items: center;
     }
     .app-grid-wrap {
-      margin: 48px 0 32px 0;
+      margin: 48px auto 32px auto;
       background: none;
       box-shadow: none;
       border-radius: 0;
-      padding: 0 2vw 30px 2vw;
-      width: 100%;
-      max-width: none;
+      padding: 0 0 30px 0;
+      width: 80vw;
+      max-width: 1600px;
+      min-width: 320px;
       animation: fadein 0.8s cubic-bezier(.43,.94,.71,1.36);
     }
     .app-title {
@@ -142,7 +143,11 @@
       color: #ea950e;
     }
     @media (max-width:900px) {
-      .app-grid-wrap {padding:0 0.5vw 24px 0.5vw;}
+      .app-grid-wrap {
+        width: 97vw;
+        min-width: 0;
+        padding: 0 0 20px 0;
+      }
       .app-grid {grid-template-columns: repeat(auto-fit, minmax(165px,1fr));}
       .app-title {font-size: 1.14rem;}
     }
