--- a/app.html
+++ b/app.html
@@ -196,10 +196,10 @@
     // === DANH SÁCH APP DỄ BỔ SUNG ===
     const apps = [
       {
-        name: "TikTok",
-        icon: "tiktok.png",
-        link: "https://www.tiktok.com/",
-        desc: "Nền tảng video ngắn nổi tiếng, giải trí và sáng tạo.",
+        name: "Microsft Project",
+        icon: "project.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EtBthx3SX11IrpGZcvxxyPQBOeZpZe9F25HyKm6xadY6Lg?e=ZDqnfj",
+        desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo).",
         price: "Miễn phí"
       },
       {
