--- a/app.html
+++ b/app.html
@@ -197,7 +197,7 @@
     const apps = [
       {
         name: "Microsft Project",
-        icon: "project.png",
+        icon: "Project.png",
         link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EtBthx3SX11IrpGZcvxxyPQBOeZpZe9F25HyKm6xadY6Lg?e=ZDqnfj",
         desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo).",
         price: "Miễn phí"
