--- a/app.html
+++ b/app.html
@@ -199,7 +199,7 @@
         name: "Microsft Project",
         icon: "Project.png",
         link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EtBthx3SX11IrpGZcvxxyPQBOeZpZe9F25HyKm6xadY6Lg?e=ZDqnfj",
-        desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo).",
+        desc: "Đây chỉ là 1 phẩn mềm duy nhất MS Project, không bao gồm các phần mềm khác của microsoft (áp dụng cho những máy đã có office rồi, muốn cài thêm 1 phần mềm này nữa thôi). Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo).",
         price: "Miễn phí"
       },
       {
